# nyc-taxi-top-trips

./: Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
output/: data_quality.parquet  summary.parquet
output/top_trips/year_month=2024-01/: _stats.parquet
output/top_trips/year_month=2025-04/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-05/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-06/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-07/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-08/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-09/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-10/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-11/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2025-12/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2026-01/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2026-02/: _data_quality.parquet  _stats.parquet
output/top_trips/year_month=2026-03/: _data_quality.parquet  _stats.parquet
src/taxi_top_trips/: config.py  main.py  pipeline.py  urls.py
src/taxi_top_trips.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_config.py  test_pipeline.py  test_urls.py
